# IntegralsAndCurves

./: CMakeLists.txt  Makefile  README.MD  asm_functions.asm  asm_functions.h  colors.h  common_interface.c  common_interface.h  equation_solver.c  equation_solver.h  functions.c  functions.h  integration.c  integration.h  main.c  settings.h  test_equation_solver.c  test_equation_solver.h  test_integration.c  test_integration.h
